--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Yohanes Ageng",
   "license": "ISC",
   "dependencies": {
+    "moment": "^2.30.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.7.1",
     "node-telegram-bot-api": "^0.64.0"
