--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "Yohanes Ageng",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.0",
     "moment": "^2.30.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.7.1",
+    "node-cron": "^3.0.3",
     "node-telegram-bot-api": "^0.64.0"
   }
 }
